Bug 395911 - pimsettingsexporter "contacts" directory path incorrect
Summary: pimsettingsexporter "contacts" directory path incorrect
Status: RESOLVED FIXED
Alias: None
Product: pimsettingexporter
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
: 377909 395385 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-06-27 03:41 UTC by Ivan Adzhubey
Modified: 2018-06-28 00:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Adzhubey 2018-06-27 03:41:52 UTC
I tried to backup my PIM settings today and noticed the following error in the PIM Settings Exporter (pimsettingsexporter) log:

Impossible to backup "/home/login_user/.local/share/share/contacts/".

Apparently, the pathname it is looking for is wrong, it contains extra "share" component which should not be there.

pimsettingsexporter version: 5.7.3
KDE 17.12.3
Plasma 5.12.5
Kubuntu 18.04 LTS w/backports PPA
Comment 1 Laurent Montel 2018-06-27 06:09:06 UTC
Git commit 7c50e9a829770aa0b23b153c4a80a2f1d575d924 by Laurent Montel.
Committed on 27/06/2018 at 06:08.
Pushed by mlaurent into branch 'Applications/18.04'.

Fix Bug 395911 - pimsettingsexporter "contacts" directory path incorrect

FIXED-IN: 18.04.3

M  +1    -1    core/addressbook/exportaddressbookjob.cpp
M  +1    -1    core/addressbook/importaddressbookjob.cpp

https://commits.kde.org/pim-data-exporter/7c50e9a829770aa0b23b153c4a80a2f1d575d924
Comment 2 Christoph Feck 2018-06-28 00:06:29 UTC
*** Bug 377909 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2018-06-28 00:07:30 UTC
*** Bug 395385 has been marked as a duplicate of this bug. ***