Fix Bug 395911 - pimsettingsexporter "contacts" directory path incorrect

FIXED-IN: 18.04.3
BUG: 395911